k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: phoenix
  labels:
    app.kubernetes.io/part-of: phoenix
